--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-app-intro-slider": "^4.0.4",
     "react-native-checkbox-selection": "^1.1.0",
     "react-native-image-crop-picker": "^0.37.2",
+    "react-native-loading-spinner-overlay": "^2.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
