--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^14.1.0",
@@ -24,6 +25,7 @@
     "react-native-checkbox-selection": "^1.1.0",
     "react-native-image-crop-picker": "^0.37.2",
     "react-native-loading-spinner-overlay": "^2.0.0",
+    "react-native-modal": "^13.0.0",
     "react-native-paper": "^4.11.1",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-safe-area-context": "^3.3.2",
